[package]
name = "win32helloworld"
version = "0.1.0"
authors = ["Allan Regush <17693494+AllanRegush@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }